--- a/deploy/csi-azurefile-node-windows.yaml
+++ b/deploy/csi-azurefile-node-windows.yaml
@@ -75,7 +75,7 @@ spec:
               cpu: 10m
               memory: 20Mi
         - name: azurefile
-          image: mcr.microsoft.com/k8s/csi/azurefile-csi:latest
+          image: mcr.microsoft.com/k8s/csi/azurefile-csi:latest-windows-1809-amd64
           imagePullPolicy: IfNotPresent
           args:
             - --v=5
